--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.0
+bleach==4.1.0
 breezy==3.0.2
 certifi==2019.11.28
 chardet==3.0.4
@@ -10,12 +11,15 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-cloudinary-storage==0.3.0
+django-summernote==0.8.20.0
 dulwich==0.19.15
 fastimport==0.9.8
 gunicorn==20.1.0
 idna==2.8
+packaging==21.3
 psycopg2-binary==2.9.3
 PyGObject==3.36.0
+pyparsing==3.0.7
 python-apt==2.0.0+ubuntu0.20.4.6
 pytz==2021.3
 PyYAML==5.3.1
@@ -24,3 +28,4 @@ requests-unixsocket==0.2.0
 six==1.14.0
 sqlparse==0.4.2
 urllib3==1.26.8
+webencodings==0.5.1
