--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ packaging==21.3
 psycopg2-binary==2.9.3
 PyGObject==3.36.0
 pyparsing==3.0.7
-python-apt==2.0.0+ubuntu0.20.4.6
+python-apt==2.0.0
 pytz==2021.3
 PyYAML==5.3.1
 requests==2.27.1
