--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+alabaster==0.7.12
 asgiref==3.5.0
+Babel==2.9.1
 bleach==4.1.0
+bootstrap-py==1.0.2
 breezy==3.0.2
 certifi==2019.11.28
 chardet==3.0.4
@@ -7,23 +10,46 @@ charset-normalizer==2.0.12
 cloudinary==1.29.0
 configobj==5.0.6
 dbus-python==1.2.16
+defusedxml==0.7.1
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2
+django-bootstrap3==21.2
 django-cloudinary-storage==0.3.0
 django-summernote==0.8.20.0
+docutils==0.17.1
 dulwich==0.19.15
 fastimport==0.9.8
+gitdb==4.0.9
+GitPython==3.1.27
 gunicorn==20.1.0
 idna==2.8
+imagesize==1.3.0
+importlib-metadata==4.11.1
+Jinja2==3.0.3
+MarkupSafe==2.1.0
 packaging==21.3
+pguard==0.4.0
 psycopg2-binary==2.9.3
+Pygments==2.11.2
+PyGObject==3.36.0
 pyparsing==3.0.7
+python-apt==2.0.0+ubuntu0.20.4.6
 pytz==2021.3
 PyYAML==5.3.1
 requests==2.27.1
-
+requests-unixsocket==0.2.0
 six==1.14.0
+smmap==5.0.0
+snowballstemmer==2.2.0
+Sphinx==4.4.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.2
 urllib3==1.26.8
 webencodings==0.5.1
+zipp==3.7.0
